Efficiencies: avoid constructing new Objects, auto boxing, and use entrySet iterators
- Use static methods to produce Numbers, rather than constructors.
- Avoid auto boxing. If primitives are needed, use Obj.parseXXX()
- Do not recalculate NodeList.getLength() inside of a loop. It is not
cached and is re-calculated on every invocation. Set value outside of
the loop.
- Avoid constructing new String() objects when not necessary.
- Use entrySet iterator, rather than Map.get()